ejbca/ejbca-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: ejbca
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: ejbca
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
