ejbca/ejbca-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ejbca-ingress
  namespace: ejbca
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: ca.senhctech.com # Thay bằng domain của bạn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ejbca-service
            port:
              number: 8443
